--- a/sudoku.html
+++ b/sudoku.html
@@ -39,7 +39,7 @@
     <div id="chess-board"></div>
   </div>
 
-  <p id="timetext"></p>
+  <p id="timetext">00:00</p>
 
   <script>
     function notHave(){
