--- a/sudoku.html
+++ b/sudoku.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="sudoku.css" />
   <meta charset="utf-8">
   <!-- 引入模块 -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="jquery.min.js"></script>
   <script src="play.js"></script>
   <script src="pageInit.js"></script>
   <script src="judge.js"></script>
