Some buttons turn grey after clicking GetAnswer

--- a/sudoku.html
+++ b/sudoku.html
@@ -22,7 +22,7 @@
     <!-- 按钮 -->
     <div id="buttons">
 
-        <button id="inner_btn" class="submitbtn" style="vertical-align:middle"
+        <button id="new_btn" class="submitbtn" style="vertical-align:middle"
             onclick="startNew()"><span>新游戏</span></button>
         <form id="inner_btn" action="" method="POST" onchange="getDifficulty()">
             <select id="diff_form" name="difficulty">
