Using lasVegas algo and ensure a unique solution

--- a/sudoku.html
+++ b/sudoku.html
@@ -27,7 +27,7 @@
 
         <button id="new_btn" class="submitbtn" style="vertical-align:middle"
             onclick="startNew()"><span>新游戏</span></button>
-        <form id="inner_btn" action="" method="POST" onchange="getDifficulty()">
+        <form id="inner_select" action="" method="POST" onchange="getDifficulty()">
             <select id="diff_form" name="difficulty">
                 <option value="Easy">Easy</option>
                 <option value="Medium" selected>Medium</option>
@@ -66,7 +66,7 @@
 
     <!-- 测试 -->
     <p id="demo0"></p>
-    <p id="demo"></p>
+    <p id="demo1"></p>
     <p id="demo2"></p>
     <p id="demo3"></p>
 
