Add module comments

--- a/sudoku.html
+++ b/sudoku.html
@@ -1,4 +1,6 @@
-<!-- MBJ -->
+<!-- Author: MBJ -->
+<!-- Partners: Chenxi Xie, Xiaoyang Deng -->
+<!-- Copyright 2019 -->
 <!DOCTYPE html>
 <html>
 
